--- a/frontend/src/Components/Item/Item.css
+++ b/frontend/src/Components/Item/Item.css
@@ -1,5 +1,5 @@
 .item {
-    width: 300px;
+    width: 280px;
     margin: 0 auto;
 }
 
@@ -32,4 +32,43 @@
 .item:hover {
     transform: scale(1.05);
     transition: 0.6s;
+}
+
+@media screen and (max-width:1280px){
+    .item{
+        width: 220px;
+        font-size: 14px;
+    }
+    .item-price-old {
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width:1024px){
+    .item{
+        width: 170px;
+        font-size: 13px;
+    }
+    .item-price-old {
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width:800px){
+    .item{
+        width: 120px;
+        font-size: 12px;
+    }
+    .item-price-old {
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width:500px){
+    .item{
+        width: 160px;
+    }
+    .item-price-old {
+        font-size: 14px;
+    }
 }
