--- a/frontend/src/Components/Navbar/navbar.css
+++ b/frontend/src/Components/Navbar/navbar.css
@@ -81,3 +81,105 @@
     background: red;
     color: white;
 }
+
+.nav_dropdown {
+    display: none;
+}
+
+@media screen and (max-width:1280px) {
+    .navbar {
+        padding: 8px 40px;
+    }
+
+    .nav-logo img {
+        width: 40px;
+    }
+
+    .nav-logo p{
+        font-size: 25px;
+    }
+
+    .nav-menu{
+        gap: 30px;
+        font-size: 18px;
+    }
+
+    .nav-login-cart {
+        gap: 30px;
+    }
+
+    .nav-login-cart button {
+        width: 120px;
+        height: 45px;
+        font-size: 18px;
+    }
+
+    .nav-cart-count {
+        margin-left: -40px;
+        margin-top: -60px;
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width:1024px){
+    .nav-logo img {
+        width: 30px;
+    }
+
+    .nav-logo p{
+        font-size: 20px;
+    }
+
+    .nav-menu{
+        gap: 20px;
+        font-size: 18px;
+    }
+
+    .nav-login-cart {
+        gap: 20px;
+    }
+
+    .nav-login-cart button {
+        width: 100px;
+        height: 40px;
+        font-size: 18px;
+    }
+
+    .nav-login-cart img {
+        width: 30px;
+    }
+
+    .nav-cart-count {
+        margin-left: -30px;
+        margin-top: -65px;
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width:800px) {
+    .nav_dropdown {
+        display: block;
+        margin-top: 5px;
+        width: 30px;
+        height: 30px;
+        rotate: -90deg;
+        transition: 0.5s;
+    }
+    .nav-menu{
+        display: none;
+        height: 60px;
+        width: 100%;
+        position: absolute;
+        background-color: white;
+        justify-content: center;
+        top: 50px;
+    }
+
+    .nav-menu-visible{
+        display: flex;
+    }
+
+    .nav_dropdown.open{
+        transform: rotate(90deg);
+    }
+}
