--- a/frontend/src/Components/DescriptionBox/DescriptionBox.css
+++ b/frontend/src/Components/DescriptionBox/DescriptionBox.css
@@ -17,7 +17,7 @@
     border: 1px solid #d0d0d0;
 }
 
-.descriptionbox-nav-box.fade { 
+.descriptionbox-nav-box.fade {
     background: #fbfbfb;
     color: #555;
 }
@@ -29,4 +29,20 @@
     border: 1px solid #d0d0d0;
     padding: 48px;
     padding-bottom: 70px;
+}
+
+@media screen and (max-width: 1280px) {
+    .descriptionbox {
+        margin: 60px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .descriptionbox {
+        margin: 60px 20px;
+    }
+
+    .descriptionbox-description {
+        font-size: 14px;
+    }
 }
