--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -1,5 +1,5 @@
 .hero {
-    height: 100vh;
+    height: auto;
     background: linear-gradient(180deg, #fde1ff, #e1ffea22 60%);
     display: flex;
 }
@@ -134,6 +134,7 @@
 
     .hero-right img {
         width: 300px;
+        height: auto;
     }
 }
 
