--- a/frontend/src/Components/Offers/Offers.css
+++ b/frontend/src/Components/Offers/Offers.css
@@ -51,7 +51,8 @@
 @media screen and (max-width:1280px) {
     .offers {
         padding: 0px 80px;
-        margin-bottom: 120px;
+        margin: 120px 0px;
+        width: auto;
     }
 
     .offers-left h1 {
